# fastapi_serverless_template

./: .gitignore  .pre-commit-config.yaml  .skjoldignore  README.md  SUMMARY.md  cli  original-readme.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.devcontainer/: devcontainer.json
api-spec/: api-spec.json  api-spec.yaml
finn_codesubmit/: app.py  datastore.py  logger.py  router.py  url_shortener.py
finn_codesubmit/api-spec/: api-spec.json
project/: app.py  router.py
qa/: test.http
tests/: test_app.py  test_datastore.py  test_url_shortener.py
