[tool.poetry]
name = "finn-codesubmit"
version = "0.1.0"
description = ""
authors = ["Paolo Sacconier <paolo@sacconier.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
